refactor: add significant names according to rule 3.2 in html-and-css

--- a/index.html
+++ b/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="matrix">
       <img src="./eisenhower-matrix.jpg">
-      <a class="more-info" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="matrix-url" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
-      <p id="top-section-for-adding-element-to-list">
+    <div class="main">
+      <p id="add-task">
         <label for="new-task">Add Item</label>
-        <div class="task-row-wrapper">
+        <div class="task-wrapper">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
