refactor: add laconic names according to rule 3.3 in html-and-css

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="main">
       <p id="add-task">
         <label for="new-task">Add Item</label>
-        <div class="task-wrapper">
+        <div class="task-wrap">
           <input id="new-task" class="task" type="text">
           <button>Add</button>
         </div>
