--- a/index.html
+++ b/index.html
@@ -6,18 +6,18 @@
     <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="matrix">
+    <section class="matrix">
       <img class="matrix-img" src="./eisenhower-matrix.jpg">
       <a class="matrix-url" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="main">
-      <p id="add-task">
+    </section>
+    <main class="main">
+      <section id="add-task">
         <label class="task-label" for="new-task">Add Item</label>
         <div class="task-wrap">
           <input class="input task-label" id="new-task" type="text">
           <button class="btn">Add</button>
         </div>
-      </p>
+      </section>
       <h3 class="title">Todo</h3>
       <ul class="tasks-list" id="incomplete-tasks">
         <li class="list-item">
@@ -51,7 +51,7 @@
           </button>
         </li>
       </ul>
-    </div>
+    </main>
     <script src="app.js"></script>
   </body>
 </html>
