refactor: add alt atr to images according to rule 1.2 in html-and-css advanced

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <section class="matrix">
       <img class="matrix-img" src="./eisenhower-matrix.jpg">
-      <a class="matrix-url" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <a class="matrix-url" href="https://goal-life.com/page/method/matrix-eisenhower" alt="Eisenhower's matrix">Want more details?</a>
     </section>
     <main class="main">
       <section id="add-task">
@@ -26,7 +26,7 @@
           <input class="input" type="text">
           <button class="btn edit">Edit</button>
           <button class="btn delete">
-            <img class="img-del" src="./remove.svg">
+            <img class="img-del" src="./remove.svg" alt="remove button">
           </button>
         </li>
         <li class="list-item edit-mode">
@@ -35,7 +35,7 @@
           <input class="input task-label" type="text" value="Go Shopping">
           <button class="btn edit">Save</button>
           <button class="btn delete">
-            <img class="img-del" src="./remove.svg">
+            <img class="img-del" src="./remove.svg" alt="remove button">
           </button>
         </li>
       </ul>
@@ -47,7 +47,7 @@
           <input class="input" type="text">
           <button class="btn edit">Edit</button>
           <button class="btn delete">
-            <img class="img-del" src="./remove.svg">
+            <img class="img-del" src="./remove.svg" alt="remove button">
           </button>
         </li>
       </ul>
