--- a/index.html
+++ b/index.html
@@ -19,22 +19,22 @@
         </div>
       </section>
       <h3 class="title">Todo</h3>
-      <ul class="tasks-list" id="incomplete-tasks">
+      <ul class="tasks-list incomplete-tasks"">
         <li class="task-item">
           <input class="task-item__cb" type="checkbox">
           <label class="task-item__task-label task-label">Pay Bills</label>
-          <input class="task-item__input-text" type="text">
-          <button class="btn btn_edit">Edit</button>
-          <button class="btn btn_delete">
+          <input class="task-item__input-text input-text" type="text">
+          <button class="btn btn__edit">Edit</button>
+          <button class="btn btn__delete">
             <img class="img-del" src="./remove.svg" alt="remove button">
           </button>
         </li>
         <li class="task-item edit-mode">
           <input class="task-item__cb" type="checkbox">
-          <label class="task-label task-label_edit">Go Shopping</label>
-          <input class="input-text" type="text" value="Go Shopping">
-          <button class="btn btn_edit">Save</button>
-          <button class="btn btn_delete">
+          <label class="task-label task-item__task-label ">Go Shopping</label>
+          <input class="task-item__input-text input-text" type="text" value="Go Shopping">
+          <button class="btn btn__edit">Save</button>
+          <button class="btn btn__delete">
             <img class="img-del" src="./remove.svg" alt="remove button">
           </button>
         </li>
@@ -43,10 +43,10 @@
       <ul class="tasks-list completed-tasks">
         <li class="task-item">
           <input class="task-item__cb" type="checkbox" checked>
-          <label class="task-label task-item__task-label task-label_complete">See the Doctor</label>
-          <input class="input-text task-item__input-text" type="text">
-          <button class="btn btn_edit">Edit</button>
-          <button class="btn btn_delete">
+          <label class="task-label task-item__task-label task-label__complete">See the Doctor</label>
+          <input class="task-item__input-text input-text" type="text">
+          <button class="btn btn__edit">Edit</button>
+          <button class="btn btn__delete">
             <img class="img-del" src="./remove.svg" alt="remove button">
           </button>
         </li>
