refactor: BEM-naming according to rule 2.1 in html-and-css advanced

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </li>
         <li class="task-item">
           <input class="task-item__cb" type="checkbox">
-          <label class="task-label task-item__task-label task-label_edit-mode">Go Shopping</label>
+          <label class="task-label task-item__task-label task-item__task-label_edit-mode">Go Shopping</label>
           <input class="task-item__input-text input-text task-item__input-text_edit-mode" type="text" value="Go Shopping">
           <button class="btn btn_edit">Save</button>
           <button class="btn btn_delete">
@@ -43,7 +43,7 @@
       <ul class="tasks-list completed-tasks">
         <li class="task-item">
           <input class="task-item__cb" type="checkbox" checked>
-          <label class="task-label task-item__task-label task-label_complete">See the Doctor</label>
+          <label class="task-label task-item__task-label task-item__task-label_complete">See the Doctor</label>
           <input class="task-item__input-text input-text" type="text">
           <button class="btn btn_edit">Edit</button>
           <button class="btn btn_delete">
