refactor: line-wrapping according to 2.5 html-and-css

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <body>
     <section class="matrix">
       <img class="matrix__img" src="./eisenhower-matrix.jpg">
-      <a class="matrix__url" href="https://goal-life.com/page/method/matrix-eisenhower" alt="Eisenhower's matrix">Want more details?</a>
+      <a class="matrix__url" href="https://goal-life.com/page/method/matrix-eisenhower" alt="Eisenhower's matrix">Want
+        more details?</a>
     </section>
     <main class="main">
       <section class="add-task">
@@ -32,7 +33,8 @@
         <li class="task-item">
           <input class="task-item__cb" type="checkbox">
           <label class="task-label task-item__task-label task-item__task-label_edit-mode">Go Shopping</label>
-          <input class="task-item__input-text input-text task-item__input-text_edit-mode" type="text" value="Go Shopping">
+          <input class="task-item__input-text input-text task-item__input-text_edit-mode" type="text"
+                 value="Go Shopping">
           <button class="btn btn_edit">Save</button>
           <button class="btn btn_delete">
             <img class="img-del" src="./remove.svg" alt="remove button">
