--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <section class="add-task">
         <label class="add-task__label">Add Item</label>
         <div class="task-wrap">
-          <input class="input-text input-text_long" type="text">
+          <input class="input-text task-wrap__input-text" type="text">
           <button class="btn task-wrap__btn">Add</button>
         </div>
       </section>
