refactor: remove alt atr from button according to 1.2 html-and-css

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <input class="task-item__input-text input-text" type="text">
           <button class="btn btn_edit">Edit</button>
           <button class="btn btn_delete">
-            <img class="img-del" src="./remove.svg" alt="remove button">
+            <img class="img-del" src="./remove.svg" alt="">
           </button>
         </li>
         <li class="task-item">
@@ -37,7 +37,7 @@
                  value="Go Shopping">
           <button class="btn btn_edit">Save</button>
           <button class="btn btn_delete">
-            <img class="img-del" src="./remove.svg" alt="remove button">
+            <img class="img-del" src="./remove.svg" alt="">
           </button>
         </li>
       </ul>
@@ -49,7 +49,7 @@
           <input class="task-item__input-text input-text" type="text">
           <button class="btn btn_edit">Edit</button>
           <button class="btn btn_delete">
-            <img class="img-del" src="./remove.svg" alt="remove button">
+            <img class="img-del" src="./remove.svg" alt="">
           </button>
         </li>
       </ul>
